<resources>
    <string name="app_name">UUBox</string>
    <string name="action_settings">清空</string>
    <string name="jump_over_str">【跳过，不再提示】</string>
    <string name="welcome_tips">欢迎进入新手向导，点击屏幕任意处继续</string>
    <string name="vertical">垂直：</string>
    <string name="horizontal">水平：</string>
    <string name="wheel">滚轮：</string>
    <string name="mouse_string">鼠标：</string>
    <string name="initab_configloadfail">配置加载出错！</string>
    <string name="initab_loading_wait">正在加载，请稍后...</string>
    <string name="initab_configsnotmatch">当前配置与设备配置不匹配！请重新写入配置！</string>
    <string name="initab_condev">请先连接设备再调整配置！</string>
    <string name="initab_bq_lmd">F2类型:步枪   灵敏度:</string>
    <string name="initab_cfq_lmd">F1类型:冲锋枪   灵敏度:</string>
    <string name="initab_ak_lmd">F3类型:AK47   灵敏度:</string>
    <string name="initab_guanfang">[官方]</string>
    <string name="initab_del_guanfang">不能删除官方配置</string>
    <string name="initab_del">删除</string>
    <string name="initab_sucessful">成功</string>
    <string name="initab_fail">失败</string>
    <string name="initab_game">游戏</string>
    <string name="initab_haveclear">已清除</string>
    <string name="initab_pressgun">其它</string>
    <string name="initab_gotoconfiglist">点击我跳转到配置选择列表</string>
    <string name="initab_gotogunpresslist">点击我跳转到其它设置</string>
    <string name="initab_curusedel">正在使用的配置不能取消！</string>
    <string name="initab_more4configs">当前最多支持写4个配置！</string>
    <string name="initab_checknewconfigs">检测到配置更新！自动写入！</string>
    <string name="initab_configbiger">配置过大！</string>
    <string name="initab_cfq">冲锋枪</string>
    <string name="initab_bq">步枪</string>
    <string name="initab_ak">AK</string>
    <string name="initab_helpinfo">帮助信息</string>
    <string name="initab_ask">问:</string>
    <string name="initab_answer">答:</string>
    <string name="initab_myconfigs">我的配置</string>
    <string name="initab_helpdoc">帮助文档</string>
    <string name="initab_appver">应用版本:</string>
    <string name="initab_devber">设备版本:</string>
    <string name="initab_redverfail">读取版本失败</string>
    <string name="initab_pixs">分辨率:</string>
    <string name="initab_devnum">设备号:</string>
    <string name="initab_devnumtoclip">设备号已经复制到剪贴板</string>
    <string name="initab_confgsaveallow">配置保存:允许</string>
    <string name="initab_baseinfo">基本信息</string>
    <string name="initab_infoempty">信息不完整，不能为空！</string>
    <string name="kbv_savetocurconfig">保存到当前配置</string>
    <string name="kbv_savetohasconfig">保存到已有的配置</string>
    <string name="kbv_newoneconfig">新建一个配置</string>
    <string name="kbv_configname">配置名称</string>
    <string name="kbv_saveconfig">保存配置</string>
    <string name="kbv_guanfangnewconfig">当前使用官方配置,默认新建一个配置</string>
    <string name="kbv_nouseconfig">当前没有使用任何配置</string>
    <string name="kbv_used">使用中</string>
    <string name="kbv_save">保存</string>
    <string name="kbv_confignameexist">配置名称已经存在</string>
    <string name="kbv_confignameempty">配置名称不能为空</string>
    <string name="kbv_savetogame">保存到游戏</string>
    <string name="kbv_newgame">新建游戏</string>
    <string name="kbv_gamename">游戏名</string>
    <string name="kbv_gamenameempty">游戏名称不能为空！</string>
    <string name="kbv_gamenameexist">游戏名称已存在！</string>
    <string name="kbv_warmwarn">温馨提示</string>
    <string name="kbv_exitapp">确定退出程序吗？</string>
    <string name="kbv_type3addkey">key不能添加附属按键按键!</string>
    <string name="kbv_union">联动</string>
    <string name="kbv_clear">清除</string>
    <string name="kbv_choicemod">选择模式</string>
    <string name="kbv_deltype3">固定按键不能移除！</string>
    <string name="kbv_type3onlyone">key只能只有一个按键!</string>
    <string name="kbv_settokeytype">设定为按键类型</string>
    <string name="kbv_del">删除</string>
    <string name="kbv_keyopreation">按键操作</string>
    <string name="kbv_hasakey">已经有一个自定义按钮</string>
    <string name="kbv_hasexist">已经存在</string>
    <string name="kbv_show">显示</string>
    <string name="kbv_hide">隐藏</string>
    <string name="mad_mouselmd">鼠标灵敏度:</string>
    <string name="mad_gunlunlmd">滚轮灵敏度:</string>
    <string name="aoac_loading">正在写入</string>
    <string name="aoac_configwritefail">配置写入失败！</string>
    <string name="aoac_configwritesuc">配置写入成功！</string>
    <string name="aoac_aoachangefail">AOA参数变更失败，字符串长度过长！</string>
    <string name="aoac_devparamfail">AOA参数变更</string>
    <string name="aoac_readinfofail">读取设备配置信息失败！</string>
    <string name="bpt_xmlparfail">配置解析出错！</string>
    <string name="bpt_upconfigok">配置上传成功!</string>
    <string name="apt_upconfigfail">配置上传失败!</string>
    <string name="sbp_saveloading">正在保存，请稍后...</string>
    <string name="sbp_savelocal">已保存到本地！</string>
    <string name="ait_readdevverfail">读取设备版本失败！</string>
    <string name="ini_uplogloading">正在上传日志，请稍后...</string>
    <string name="ini_uologok">日志上传成功!</string>
    <string name="ini_uplogfail">日志上传失败!</string>
    <string name="main_entergameshowviews">进入游戏会自动显示游戏键位图!</string>
    <string name="main_openfloat">为了让应用正常运行，请开启【悬浮窗权限】</string>
    <string name="main_opennow">现在开启</string>
    <string name="main_floatnot">【悬浮窗权限】未开启！</string>
    <string name="main_float">悬浮窗</string>
    <string name="main_floatplease">请打开悬浮窗</string>
    <string name="main_verupdate">版本更新</string>
    <string name="main_findnewver">发现新版本:</string>
    <string name="main_updateenable">可更新</string>
    <string name="main_curappver">当前应用版本:</string>
    <string name="main_updatefail">应用【存储权限】未打开，升级失败！</string>
    <string name="main_loadstart">开始下载...</string>
    <string name="main_loadproce0">升级进度 0%</string>
    <string name="main_load">下载</string>
    <string name="main_exit">退出</string>
    <string name="main_cancel">取消</string>
    <string name="main_updateexec">下载异常，升级失败！</string>
    <string name="main_updateok">新版本下载成功！准备安装！</string>
    <string name="main_updateproc">升级进度</string>
    <string name="main_loadres">正在加载资源...</string>
    <string name="main_backrun">点击我后台运行</string>
    <string name="main_feedbackhint">请输入您的反馈，最少10个文字，谢谢!</string>
    <string name="main_feedbacksend">发送</string>
    <string name="ms_condevfail">与设备连接失败！请重新插拔数据线！</string>
    <string name="ms_goodbess">大吉大利，今晚吃鸡！</string>
    <string name="ms_entergamefirst">请先进入游戏！</string>
    <string name="ini_config">配置</string>
    <string name="main_backrunfeautre">以后启动自动在后台运行！</string>
    <string name="aoa_changshang">厂商信息:</string>
    <string name="aoamod">模 式:</string>
    <string name="aoaser">序 列 号:</string>
    <string name="ok">确定</string>
    <string name="lay_mouselmd">鼠标灵敏度调节</string>
    <string name="resetdefault">恢复默认</string>
    <string name="mouselmd">鼠标</string>
    <string name="gunlunlmd">滚轮</string>
    <string name="initab_databig">配置数量过大，请删除一些</string>
    <string name="initab_writetodev">写入设备</string>
    <string name="initab_unchoiceconfig">未选中的配置</string>
    <string name="initab_choiceconfigs">选中的配置</string>
    <string name="initab_gunpress_tip">&#160;&#160;&#160;&#160;压枪说明:武器键(1,2键)加枪类型键(F1,F2,F3)设置不同压枪效果,两把枪可分别配置, 武器键加ESC键关闭对应压枪</string>
    <string name="initab_bqdefault">F2类型:步枪</string>
    <string name="initab_akdefault">F3类型:AK47</string>
    <string name="initab_cfqdefault">F1类型:冲锋枪</string>
    <string name="initab_bootchoice">开机默认配置选择:</string>
    <string name="initab_pressgunclose">关闭压枪</string>
    <string name="initab_usecfqdefault">默认使用冲锋枪</string>
    <string name="initab_usebqdefault">默认使用步枪</string>
    <string name="initab_useakdefault">默认使用AK47</string>
    <string name="initab_problems">常见问题:</string>
    <string name="initab_mingcheng">名称</string>
    <string name="initab_bianhao">编号</string>
    <string name="initab_fastkey">快捷键</string>
    <string name="initab_devver">设备版本</string>
    <string name="initab_logallow">收集日志:允许</string>
    <string name="initab_cap">容量</string>
    <string name="kbv_close">关闭</string>
    <string name="ifeedback">我要反馈</string>
    <string name="kb_curused">当前使用:</string>
    <string name="movead_fastkey">快捷键:Ctrl+</string>
    <string name="ble_getdevverok">获取设备版本成功:</string>
    <string name="getdevimgok">获取设备Img成功:</string>
    <string name="ble_sameimg">不能升级到相同的固件！</string>
    <string name="ble_otafail">升级失败！</string>
    <string name="ble_updating">正在升级</string>
    <string name="ble_otaoffdev">警告！升级过程中请不要关闭设备，否则可能会导致设备损坏！</string>
    <string name="ble_otaok">设备升级成功！</string>
    <string name="ble_otanewver">检测到新的固件,准备升级</string>
    <string name="ble_otamcuupdate">检测到MCU需要升级...</string>
    <string name="ble_otaoffdont">升级中，请勿关闭设备...</string>
    <string name="ota_mcuok">MCU升级成功！</string>
    <string name="ble_mcufail">MCU升级失败！请尝试取消蓝牙配对再重新连接进行MCU升级！</string>
    <string name="adjustgunsen">压枪灵敏度调整</string>
    <string name="main_updatemsg">更新内容</string>
    <string name="initab_automouse">打开地图背包自动呼出鼠标</string>
    <string name="initab_tpcfg">该配置属于投屏配置</string>
    <string name="initab_outpath">输出路径</string>
    <string name="initab_storechange">存储更改！</string>
    <string name="netdisable">网络不可用!</string>
    <string name="readimgfail">读取IMG失败</string>
    <string name="unknowerror">未知错误</string>
    <string name="gujianver">固件版本</string>
    <string name="aoa_disconnect">连接断开</string>
    <string name="ini_uplog">点击上传日志</string>
    <string name="initab_simumouse">使用模拟鼠标</string>
    <string name="initab_needrebound">修改了鼠标类型，需要取消配对重新连接！</string>

    <string-array name="menu_ini_help_items">
        <item>《映射按键设置》</item>
    </string-array>
    <string-array name="menu_ini_help_contents">
        <item>1.增加按键：\n        &#160;&#160;长按住需要映射的空白位置，会出现带“？”的按钮,键盘上按下需要设置的按键，“？”图标会变成对应按键，点击“关闭”按钮会提示是否保存；\n
              2.删除按键：\n        &#160;&#160;按住待删除的按键，此时屏幕顶部会出现一个红色的垃圾桶，将该按键拖动到垃圾桶位置即可完成删除，点击“关闭”按钮会提示是否保存；\n
              3.特殊按键：\n        &#160;&#160;当拖出带“？”的按钮到指定位置，按下键盘上的按键之后，如果已经存在该按键，则该按键被认为是已存在按键的附属按键，有2种类型：a.联动类型。附属按键标记颜色为绿色，该类型按键被按下后，主按键和附属按键会同时被按下。（注意：删除主按键会将导致附属按键一同删除）；\n
              4.按键缩放：\n        &#160;&#160;通过两只手指可以对方向键键进行缩放，即假设右手食指按住按键之后，中指按下屏幕任意位置，通过适当移动中指即可对按键进行缩放。
        </item>
    </string-array>
    <string-array name="gunqaitems">
        <item>M416和SCAR都用步枪的配置吗?`步枪除AK47外压枪参数基本相同,都是用步枪参数</item>
        <item>不开镜时开枪会压到地上?`只支持开镜压枪,切换武器(1/2键)或换子弹(R键)会临时停止压枪. 在近距离不开镜钢枪时可以按一下R键临时停止压枪</item>
        <item>刺激战场两把枪可以配置不同参数吗?`刺激战场主武器通过1+ESC关闭压枪,通过1+F1,1+F2,1+F3配置压枪参数.副武器通过2+ESC关闭压枪,通过2+F1,2+F2,2+F3配参数(其他游戏切枪方式不同,不分主副武器,建议将主副武器的参配置到一样)</item>
        <item>切换倍镜时要切换压枪配置吗?`不需要 ,请将游戏开枪灵敏度所有倍镜开火灵敏度都修改为30(可微调),不开镜和8倍镜不用修改</item>
        <item>如何调整压枪参数?`先据习惯修改合适开火灵敏度(所有倍镜开火灵敏用同一灵敏度),再调整压枪灵敏直到压枪效果最好</item>
        <item>为什么用同样的枪有时会压过了?`不同配件,不同开枪姿势(站立,蹲下和趴下开枪)都会稍微影响开枪上飘的幅度,可以略微手动压枪弥补,垂直握把对压枪参数影响很大, 不建议配垂直握,推荐T形握把</item>
    </string-array>
</resources>
