<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_margin="5dp"
    android:paddingLeft="10dp"
    android:paddingTop="5dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:background="@drawable/dialog_message_box"
        android:padding="3dp"
        android:textColor="@color/mk_white"
        android:textSize="20sp"
        android:text="@string/initab_appver"
        android:id="@+id/iniabout_appver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:background="@drawable/dialog_message_box"
        android:padding="3dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/mk_white"
        android:textSize="20sp"
        android:text="@string/initab_devver"
        android:id="@+id/iniabout_devver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:background="@drawable/dialog_message_box"
        android:padding="3dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/mk_white"
        android:textSize="20sp"
        android:text="@string/initab_pixs"
        android:id="@+id/iniabout_pix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:background="@drawable/dialog_message_box"
        android:padding="3dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/mk_white"
        android:textSize="20sp"
        android:text="@string/initab_devnum"
        android:id="@+id/iniabout_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:background="@drawable/dialog_message_box"
        android:padding="3dp"
        android:visibility="gone"
        android:layout_marginTop="5dp"
        android:textColor="@color/mk_white"
        android:textSize="20sp"
        android:text="@string/initab_confgsaveallow"
        android:id="@+id/iniabout_savexml"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:background="@drawable/dialog_message_box"
        android:padding="3dp"
        android:visibility="gone"
        android:layout_marginTop="5dp"
        android:textColor="@color/mk_white"
        android:textSize="20sp"
        android:text="@string/initab_logallow"
        android:id="@+id/iniabout_correctlog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>