<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/rock_blue"
            android:text="@string/aoa_changshang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:textSize="12sp"
            android:singleLine="true"
            android:id="@+id/aoaparam_changshang"
            android:text="@string/aoa_changshang"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/rock_blue"
            android:text="@string/aoamod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:textSize="12sp"
            android:singleLine="true"
            android:id="@+id/aoaparam_moshi"
            android:text="@string/aoamod"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/rock_blue"
            android:text="@string/aoaser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:textSize="12sp"
            android:id="@+id/aoaparam_xuliehao"
            android:text="@string/aoaser"
            android:singleLine="true"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/aoaparam_ok"
        android:text="@string/ok"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="@drawable/dialog_message_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>