<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/dialog_keyboard_rock_attr_parent"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:background="@drawable/dialog_message_box_b">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#00000000"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="4dp"
                android:text="@string/lay_mouselmd"
                android:textColor="@color/mk_white"
                android:textStyle="bold"/>



        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_margin="15dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="10sp"
                android:layout_marginRight="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/mouselmd"
                android:textColor="@color/mk_white" />

            <ImageView
                android:id="@+id/sb_sub"
                android:background="@mipmap/gunsub"
                android:layout_width="20dp"
                android:layout_height="20dp" />
            <TextView
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:textSize="8sp"
                android:layout_gravity="center"
                android:id="@+id/mouse_adjust_sb_sen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="13"
                android:textColor="@color/mk_white"/>

            <ImageView
                android:id="@+id/sb_add"
                android:background="@mipmap/gunadd"
                android:layout_width="20dp"
                android:layout_height="20dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_margin="15dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="10sp"
                android:layout_marginRight="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/gunlunlmd"
                android:textColor="@color/mk_white" />

            <ImageView
                android:id="@+id/gl_sub"
                android:background="@mipmap/gunsub"
                android:layout_width="20dp"
                android:layout_height="20dp" />
            <TextView
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:textSize="8sp"
                android:layout_gravity="center"
                android:id="@+id/mouse_adjust_gl_sen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="13"
                android:textColor="@color/mk_white"/>

            <ImageView
                android:id="@+id/gl_add"
                android:background="@mipmap/gunadd"
                android:layout_width="20dp"
                android:layout_height="20dp" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/rbn_mouse_save"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="right|top"
        android:layout_margin="5dp"
        android:src="@mipmap/frame_close"/>

    <TextView
        android:layout_gravity="right|bottom"
        android:layout_margin="5dp"
        android:textSize="12sp"
        android:padding="8dp"
        android:id="@+id/btn_reset_mousesbr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/gunaddsub_bg"
        android:text="@string/resetdefault"
        android:textColor="@color/b1" />
</FrameLayout>
